<resources>
    <string name="app_name">TestApplication</string>
    <string name="start_select_food">开始点餐</string>
    <string name="name">姓名：</string>
    <string name="name_hint">请输入姓名</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="button_download">点击下载</string>
    <string name="textview_download">准备下载</string>
    <string name="downloading">下载中</string>
    <string name="download_finish">下载完成</string>
    <string name="download_fail">下载失败</string>
</resources>