<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseFoodActivity">
    <TextView
        android:onClick="toActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B9B9FF"
        android:text="@string/start_select_food"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:textColor="#8A2BE2"
        android:textStyle="italic|bold"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="22sp"/>
            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="22sp"/>
            <RadioGroup
                android:id="@+id/sexRadioGroup"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="75dp"
                    android:text="@string/male"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="75dp"
                    android:text="@string/female"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="喜好"
                android:textSize="22sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/hotCheckBox"
                    android:text="辣"
                    android:textSize="22sp"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"/>
                <CheckBox
                    android:id="@+id/fishCheckBox"
                    android:text="海鲜"
                    android:textSize="22sp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"/>
                <CheckBox
                    android:id="@+id/sourCheckBox"
                    android:text="酸"
                    android:textSize="22sp"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="预算"
                android:textSize="22sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0元"
                android:textSize="22sp"/>
            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="200dp"
                android:max="100"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100元"
                android:textSize="22sp"/>
            
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/searchButton"
        android:text="寻找菜品"
        android:textSize="22sp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/foodImageView"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>
        <ToggleButton
            android:id="@+id/showToggleButton"
            android:textOff="下一个"
            android:textOn="显示信息"
            android:textSize="22sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_height="50dp"/>
    </LinearLayout>
</LinearLayout>